--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 /plots
 /data
-*.pyc
-*.ipynb_checkpoints
+/paper
 /lib/.ipynb_checkpoints
 /lib/__pycache__
+*.pdf
+*.pyc
+*.ipynb_checkpoints
+*.png
